2007-06-29 tardo <tardo@nagi-fanboi.net>
* Built for x86_64
* Removed all the unneccessary stuff, will
  probably clean out PKGBUILD on next upgrade